preliminary changes to about

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
   	</header>
 
 	<!-- content -->
-	<div class="main-content container">
+	<div class="main-content container about">
 		<!-- contact us -->
     <div class="content-item about-contact">
       <h3 id="title">About</h3>
