added image content and changes to review section

--- a/cart.html
+++ b/cart.html
@@ -52,7 +52,7 @@
 
         <div class="cart-card-left cart-box">
           <div class="cart-item">
-            <img src="img/item_1.png"/>
+            <img src="img/item_1_0.png"/>
               <p>cart item details</p>
           </div>
           <div class="cart-item">
