--- a/catalog.html
+++ b/catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="js/functions.js">
+    <script src="js/linkTo.js">
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +56,7 @@
     <div class="content-item catalog-list">
       <div onclick="pointTo('detailedProduct.html')" class="item">
 
-      <img src="img/item_1.png" alt="item_1"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
+      <img src="img/item_1_0.png" alt="item_1_0"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
       <p class="price">$109.99</p>
       </div>
       <div onclick="pointTo('detailedProduct.html')" class="item"><img src="img/item_2.png" alt="item_2"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
