--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -52,7 +52,7 @@
 
         <div class="product-img">
           <div class="image-file image-1">
-            <img class="image-preview" src="img/item_1.png" alt="image 1">
+            <img class="image-preview" src="img/item_1_0.png" alt="image 1">
 
           </div>
 
@@ -99,6 +99,12 @@
             <div class="review-description">
               <p>Great product, great design and build quality is top-notch. Highly recommend this product to all fans out there!</p>
             </div>
+          </div>
+          <div class="review-write">
+            <textarea placeholder="Write a review..."></textarea>
+              <form>
+                <button>Submit Review</button>
+              </form>
           </div>
 
 
