--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <title>About</title>
+
+<!-- 
+    w3schools.com(n.d.).CSS Layout - Horizontal & Vertical Align. Retrieved from
+      https://www.w3schools.com/css/css_align.asp
+     -->
+
   </head>
   <body>
 
@@ -46,10 +52,22 @@
 
 	<!-- content -->
 	<div class="main-content container about">
-		<!-- contact us -->
-    <div class="content-item about-contact">
+
+    <div class="content-item about-content">
       <h3 id="title">About</h3>
-      <h3>Contact Us</h3>
+          <!-- sub-navigation -->
+      <div class="about-content-box">
+        <ul>
+         <li><a href="#contact">Contact Us</a></li>
+         <li><a href="#addresses">Addresses</a></li>
+         <li><a href="#faq">FAQ</a></li>
+       </ul>
+      </div>
+    </div>
+
+    <div class="content-item about-contact">
+      <!-- contact us --> 
+      <h4 id="contact">Contact Us</h4>
       <ul>
         <li>E-mail: ----------</li>
         <li>Phone1: (626)243-7837</li>
@@ -58,7 +76,7 @@
     </div>
     <!-- store addresses -->
     <div class="content-item about-addresses">
-      <h3>Store Addresses</h3>
+      <h4 id="addresses">Store Addresses</h4>
         <ol>
           <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
           <li>Cras malesuada metus eu magna elementum, sed tincidunt elit ullamcorper.</li>
@@ -69,7 +87,7 @@
     <!-- FAQ -->
     <div class="content-item about-faq">
 
-        <h3>FAQ</h3>
+        <h4 id="faq">FAQ</h4>
 
         <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
         <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
