some flexibility, colour change
some problems with review and review textbox

--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -53,7 +53,6 @@
         <div class="product-img">
           <div class="image-file image-1">
             <img class="image-preview" src="img/item_1_0.png" alt="image 1">
-
           </div>
 
 
@@ -66,7 +65,7 @@
 
         <div class="product-info">
           <h3>Manchester United 2019/2020 Home Kit</h3>
-
+          <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
         </div>
 
 
@@ -110,7 +109,7 @@
 
         </div>
         <!-- end left -->
-      </div>
+     </div>
 
       <div class="product-right">
         <p>Size:</p>
@@ -124,8 +123,8 @@
         <p>Quantity:</p>
         <input type="number" name="quantity" min="1" max="99">
         <div class="add-to-cart-button">
-            <a href="cart.html"><button type="button">Add to Cart</button></a>
-          </div>
+          <a href="cart.html"><button type="button">Add to Cart</button></a>
+        </div>
       </div>
 
 
