--- a/orderList.html
+++ b/orderList.html
@@ -47,23 +47,21 @@
 
 	<!-- content -->
 	<div class="main-content container">
+<!--       <h3 class="title">Ordered List</h3> -->
+      
       <div class="cart cart-card-left">
-        <div class="cart-item cart-info-box">
-          <div class="image"><p>product image</p></div>
-          <div class="detail">
-            <p>order list item details</p>
+          <div class="cart-item">
+            <img src="img/item_1_0.png"/>
+              <p>ordered details</p>
           </div>
-        </div>
-        <div class="cart-info-box">
-          <div class="image"><p>product image</p></div>
-          <div class="detail">
-            <p>order list item details</p>
+          <div class="cart-item">
+            <img src="img/item_2.png"/>
+              <p>ordered details</p>
           </div>
-        </div>
       </div>
-        <div class="cart-info-right">
+      <div class="cart-info-right">
           <a href="index.html" class="button">back to home</a>
-        </div>
+      </div>
 	</div>
 
 
