changes to confirmation

--- a/confirmation.html
+++ b/confirmation.html
@@ -47,7 +47,7 @@
 	<!-- content -->
 	<div class="main-content container">
     <div class="shipping">
-      <h3>Thank you for your purchasing</h3><br>
+      <h3>Thank you for your purchase</h3>
       <a href="orderList.html" class="button">view order list</a>
     </div>
 	</div>
