--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -57,9 +57,9 @@
 
 
           <div class="dot-row">
-            <span class="image-dot" onClick="showImage(1)"></span>
-            <span class="image-dot" onClick="showImage(2)"></span>
-            <span class="image-dot" onClick="showImage(3)"></span>
+            <span class="image-dot dot-1 image-dot-active" onClick="showImage(1)"></span>
+            <span class="image-dot dot-2" onClick="showImage(2)"></span>
+            <span class="image-dot dot-3" onClick="showImage(3)"></span>
           </div>
         </div>
 
