--- a/orderList.html
+++ b/orderList.html
@@ -47,23 +47,36 @@
 
 	<!-- content -->
 	<div class="main-content container">
-      <div class="cart cart-card-left">
-        <div class="cart-item cart-info-box">
-          <div class="image"><p>product image</p></div>
-          <div class="detail">
-            <p>order list item details</p>
+    <div class="main-content container order-list-container">
+      <h3>Your Order List</h3>
+
+      <!-- shopping cart list -->
+        <div class="order-list">
+
+          <div class="cart-card-left cart-box">
+            <div class="cart-item">
+              <img src="img/item_1_0.png"/>
+                <p>cart item details</p>
+            </div>
+            <div class="cart-item">
+              <img src="img/item_2.png"/>
+                <p>cart item details</p>
+            </div>
+            <div class="cart-item">
+              <img src="img/item_2.png"/>
+                <p>cart item details</p>
+            </div>
+            <div class="cart-item">
+              <img src="img/item_2.png"/>
+                <p>cart item details</p>
+            </div>
+
           </div>
-        </div>
-        <div class="cart-info-box">
-          <div class="image"><p>product image</p></div>
-          <div class="detail">
-            <p>order list item details</p>
+          <div class="return-to-home">
+            <a href="index.html" class="button">back to home</a>
           </div>
         </div>
       </div>
-        <div class="cart-info-right">
-          <a href="index.html" class="button">back to home</a>
-        </div>
 	</div>
 
 
