--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <title>About</title>
 
-<!-- 
+<!--
     w3schools.com(n.d.).CSS Layout - Horizontal & Vertical Align. Retrieved from
       https://www.w3schools.com/css/css_align.asp
      -->
@@ -24,7 +24,7 @@
 
 
     	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
+            <a href="index.html" class="nav-main-logo"><img src="img/logo.png" alt="Logo"/></a>
             <nav class="nav-row-1">
               <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
               <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="content-item about-contact">
-      <!-- contact us --> 
+      <!-- contact us -->
       <h4 id="contact">Contact Us</h4>
       <ul>
         <li>E-mail: ----------</li>
