grid changes for index so that items are evenly spaced.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="club"><img src="img/BPL/tottenham.svg" alt="football_club"/><p>Tottenham Hotspur</p></div>
       <div class="club"><img src="img/BPL/watford.svg" alt="football_club"/><p>Watford</p></div>
       <div class="club"><img src="img/BPL/west_ham.svg" alt="football_club"/><p>West Ham United</p></div>
-      <div class="club"><img src="img/BPL/wolves.svg" alt="football_club"/><p>Wolverhampton</p></div>
+      <div class="club"><img src="img/BPL/wolves.svg" alt="football_club"/><p>Wolves</p></div>
 		</div>
 	</div>
 
