update header for all pages

--- a/orderList.html
+++ b/orderList.html
@@ -14,36 +14,36 @@
   <body>
 
     <header>
-  	  	<!-- logo? -->
+        <!-- logo? -->
         <div class="header-menu ">
 
 
-    	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
+          <div class="header-row-1">
+            <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
               <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
               <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
 
             </nav>
-    	    </div>
+          </div>
 
 
-    	    <!-- search bar -->
-    	    <div class="header-row-2">
+          <!-- search bar -->
+          <div class="header-row-2">
             <input type="text" placeholder="Search here...">
 
           </div>
 
           <div class="header-row-3">
-      		  <nav class="nav-row-3">
+            <nav class="nav-row-3">
               <a href="catalog.html" class="nav-main-item">Catalog</a>
-      	      <a href="news.html" class="nav-main-item">News</a>
+              <a href="news.html" class="nav-main-item">News</a>
 
-      	      <a href="about.html" class="nav-main-item">About</a>
+              <a href="about.html" class="nav-main-item">About</a>
             </nav>
           </div>
 
-  	</header>
+    </header>
 
 	<!-- content -->
 	<div class="main-content container">
