--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
 
 
           <div class="header-row-1">
-            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
+            <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
               <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
               <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
