--- a/orderList.html
+++ b/orderList.html
@@ -22,8 +22,12 @@
           <div class="header-row-1">
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
-              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
-              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
+              <div class="nav-main-item">
+                <a href="profile.html"><img src="img/profile_icon.png"></a>
+              </div>
+              <div class="nav-main-item">
+                <a href="cart.html"><img src="img/cart_icon.png"></a>
+              </div>
 
             </nav>
           </div>
