--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
 
 	<!-- content -->
 	<div class="main-content container cart-container">
-    <h3>Shopping Cart</h3>
+    <h3 id="title">Shopping Cart</h3>
 
 		<!-- shopping cart list -->
       <div class="cart">
