changes to profile

--- a/about.html
+++ b/about.html
@@ -27,8 +27,12 @@
           <div class="header-row-1">
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
-              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
-              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
+              <div class="nav-main-item">
+                <a href="profile.html"><img src="img/profile_icon.png"></a>
+              </div>
+              <div class="nav-main-item">
+                <a href="cart.html"><img src="img/cart_icon.png"></a>
+              </div>
 
             </nav>
           </div>
@@ -53,54 +57,52 @@
 
 	<!-- content -->
 	<div class="main-content container about">
-
-    <div class="content-item about-content">
-      <h3 id="title">About</h3>
-          <!-- sub-navigation -->
-      <div class="about-content-box">
-        <ul>
-         <li><a href="#contact">Contact Us</a></li>
-         <li><a href="#addresses">Addresses</a></li>
-         <li><a href="#faq">FAQ</a></li>
-       </ul>
-      </div>
-    </div>
-
-    <div class="content-item about-contact">
-      <!-- contact us -->
-      <h4 id="contact">Contact Us</h4>
+    <!-- <div class="about-navigation">
       <ul>
-        <li>E-mail: ----------</li>
-        <li>Phone1: (626)243-7837</li>
-        <li>Phone2: XXX-XXX-XXX</li>
-      </ul>
-    </div>
-    <!-- store addresses -->
-    <div class="content-item about-addresses">
-      <h4 id="addresses">Store Addresses</h4>
-        <ol>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Cras malesuada metus eu magna elementum, sed tincidunt elit ullamcorper.</li>
-          <li>Etiam volutpat odio sed tempor dignissim.</li>
-        </ol>
-    </div>
+       <li><a href="#contact">Contact Us</a></li>
+       <li><a href="#addresses">Addresses</a></li>
+       <li><a href="#faq">FAQ</a></li>
+     </ul>
 
-    <!-- FAQ -->
-    <div class="content-item about-faq">
 
-        <h4 id="faq">FAQ</h4>
+    </div> -->
+    <div class="about-content">
 
-        <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
-        <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
-
-        <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
-        <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
-
-        <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
-        <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
-
-        <!-- end of faq -->
+      <div class="about-contact">
+        <!-- contact us -->
+        <h4 id="contact">Contact Us</h4>
+        <ul>
+          <li>E-mail: ----------</li>
+          <li>Phone1: (626)243-7837</li>
+          <li>Phone2: XXX-XXX-XXX</li>
+        </ul>
       </div>
+      <!-- store addresses -->
+      <div class="about-addresses">
+        <h4 id="addresses">Store Addresses</h4>
+          <ol>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>Cras malesuada metus eu magna elementum, sed tincidunt elit ullamcorper.</li>
+            <li>Etiam volutpat odio sed tempor dignissim.</li>
+          </ol>
+      </div>
+
+      <!-- FAQ -->
+      <div class="about-faq">
+
+          <h4 id="faq">FAQ</h4>
+
+          <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+          <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+
+          <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+          <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+
+          <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+          <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+    
+        </div>
+    </div>
 
     <!-- end of main content -->
 	</div>
