--- a/cart.html
+++ b/cart.html
@@ -21,8 +21,12 @@
           <div class="header-row-1">
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
-              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
-              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
+              <div class="nav-main-item">
+                <a href="profile.html"><img src="img/profile_icon.png"></a>
+              </div>
+              <div class="nav-main-item">
+                <a href="cart.html"><img src="img/cart_icon.png"></a>
+              </div>
 
             </nav>
           </div>
@@ -47,7 +51,7 @@
 
 	<!-- content -->
 	<div class="main-content container cart-container">
-    <h3>Shopping Cart</h3>
+    <h3 id="title">Shopping Cart</h3>
 
 		<!-- shopping cart list -->
       <div class="cart">
