add info to profile

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,11 @@
 
     <title>Profile</title>
 
-<!--     w3schools (n.d.). How TO - Toggle Switch. Retrieved from https://www.w3schools.com/howto/howto_css_switch.asp -->
+<!--    
+  fake address from:
+
+  fakepersongenerator.com (n.d.). Random Address Generator. Retrieved from https://www.fakepersongenerator.com/Random/generate_address
+ -->
   </head>
   <body>
 
@@ -93,7 +97,11 @@
 		<!-- billing information -->
 		<div class="content-item profile-billing">
       <h3>Billing info</h3>
-      
+      <ul>
+        <li>303 Browning Lane</li>
+        <li>Horseheads New York NY</li>
+        <li>14845</li>
+      </ul>
 		</div>
 
 
