changes to profile, modified notification list

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 
     <title>Profile</title>
 
-<!--    
+<!--
   fake address from:
 
   fakepersongenerator.com (n.d.). Random Address Generator. Retrieved from https://www.fakepersongenerator.com/Random/generate_address
@@ -86,11 +86,11 @@
 
 		<!-- notification -->
 		<div class="content-item profile-notification">
-      <h3>Notification</h3>
-          <li>Notify me via e-amil when there are new arrivals:</li>
+      <h3>Notifications</h3>
         <ul>
-          <li><input type="radio" name="notification" value="no">No</li>
-          <li><input type="radio" name="notification" value="yes" checked>Yes</li>
+          <li><input type="checkbox" name="newsletter" value="sub-newsletter"> Subscribe to our newsletter.</li>
+          <li><input type="checkbox" name="admin-email" value="admin-email"> Receive e-mails from admins.</li>
+          <li><input type="checkbox" name="profile-pub" value="profile-public"> Allow other users to see my profile.</li>
         </ul>
 		</div>
 
