changed some format and grid in catalog

--- a/catalog.html
+++ b/catalog.html
@@ -60,13 +60,15 @@
       <p>Filter by:</p>
       <div class="filter-style">
         <form action="/action_page.php" method="get">
-          <input type="checkbox" name="filter" value="new" checked="checked"> New Arrival<br>
-          <input type="checkbox" name="filter" value="price">Price<br>
-          <input type="checkbox" name="filter" value="size">Size<br>
-          <input type="checkbox" name="filter" value="men">Men<br>
-          <input type="checkbox" name="filter" value="women">Women<br>
-          <input type="checkbox" name="filter" value="kids">Kids<br>
-          <input type="checkbox" name="filter" value="clearance">Clearance<br>
+          <ul>
+            <li><input type="checkbox" name="filter" value="new" checked="checked"> New Arrival</li>
+            <li><input type="checkbox" name="filter" value="price">Price</li>
+            <li><input type="checkbox" name="filter" value="size">Size</li>
+            <li><input type="checkbox" name="filter" value="men">Men</li>
+            <li><input type="checkbox" name="filter" value="women">Women</li>
+            <li><input type="checkbox" name="filter" value="kids">Kids</li>
+            <li><input type="checkbox" name="filter" value="clearance">Clearance</li>
+          </ul>
         </form>  
       </div>
     </div>
