added content for all pages that needed content.

--- a/orderList.html
+++ b/orderList.html
@@ -51,7 +51,7 @@
 	<!-- content -->
 	<div class="main-content container">
     <div class="main-content container order-list-container">
-      <h3>Your Order List</h3>
+      <h3 id="title">Your Order List</h3>
 
       <!-- shopping cart list -->
         <div class="order-list">
@@ -59,19 +59,23 @@
           <div class="cart-card-left cart-box">
             <div class="cart-item">
               <img src="img/item_1_0.png"/>
-                <p>cart item details</p>
+                <p>Manchester United 2019/2020 Home Kit</p>
+                <p class="price">$109.99</p>
             </div>
             <div class="cart-item">
-              <img src="img/item_2.png"/>
-                <p>cart item details</p>
+              <img src="img/item_2_0.png"/>
+                <p>Tottenham Hotspurs 2018/2019 Third Kit</p>
+                <p class="price">$109.99</p>
             </div>
             <div class="cart-item">
-              <img src="img/item_2.png"/>
-                <p>cart item details</p>
+              <img src="img/item_5.png"/>
+                <p>Manchester United 2018/2019 Third Kit</p>
+                <p class="price">$109.99</p>
             </div>
             <div class="cart-item">
-              <img src="img/item_2.png"/>
-                <p>cart item details</p>
+              <img src="img/item_8.png"/>
+                <p>Manchester United 1998/1999 Home Kit</p>
+                <p class="price">$159.99</p>
             </div>
 
           </div>
