--- a/cart.html
+++ b/cart.html
@@ -57,19 +57,31 @@
         <div class="cart-card-left cart-box">
           <div class="cart-item">
             <img src="img/item_1_0.png"/>
-              <p>cart item details</p>
+              <p>Manchester United 2019/2020 Home Kit</p>
+              <p class="price">$109.99</p>
+              <input type="number" name="quantity" min="1" max="99" value="1">
+              <button>Update</button>
           </div>
           <div class="cart-item">
-            <img src="img/item_2.png"/>
-              <p>cart item details</p>
+            <img src="img/item_2_0.png"/>
+              <p>Tottenham Hotspurs 2018/2019 Third Kit</p>
+              <p class="price">$109.99</p>
+              <input type="number" name="quantity" min="1" max="99" value="1">
+              <button>Update</button>
           </div>
           <div class="cart-item">
-            <img src="img/item_2.png"/>
-              <p>cart item details</p>
+            <img src="img/item_5.png"/>
+              <p>Manchester United 2018/2019 Third Kit</p>
+              <p class="price">$109.99</p>
+              <input type="number" name="quantity" min="1" max="99" value="1">
+              <button>Update</button>
           </div>
           <div class="cart-item">
-            <img src="img/item_2.png"/>
-              <p>cart item details</p>
+            <img src="img/item_8.png"/>
+              <p>Manchester United 1998/1999 Home Kit</p>
+              <p class="price">$159.99</p>
+              <input type="number" name="quantity" min="1" max="99" value="1">
+              <button>Update</button>
           </div>
         </div>
 
