--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <title>Catalog</title>
 
-<!-- 
+<!--
     w3schools(n.d.). tryhtml_form_checkbox. Retrieved from https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_form_checkbox
  -->
 
@@ -56,37 +56,53 @@
 	<div class="main-content container">
 		<!-- search and filter -->
     <div class="content-item catalog-filter">
+      <div class="sort-style">
+        <p>Sort by: </p>
+        <ul>
+          <li><input type="radio" name="sort" value="time" checked>Arrival: Newest to Oldest</li>
+          <li><input type="radio" name="sort" value="time">Arrival: Oldest to Newest</li>
+          <li><input type="radio" name="sort" value="price">Price: Low to High</li>
+          <li><input type="radio" name="sort" value="price">Price: High to Low</li>
+        </ul>
 
-      <p>Filter by:</p>
+
+
+      </div>
+
       <div class="filter-style">
-        <form action="/action_page.php" method="get">
+        <p>Filter by:</p>
           <ul>
-            <li><input type="checkbox" name="filter" value="new" checked="checked"> New Arrival</li>
-            <li><input type="checkbox" name="filter" value="price">Price</li>
+            <li><input type="checkbox" name="filter" value="new" checked="checked"> New Arrivals</li>
+
             <li><input type="checkbox" name="filter" value="size">Size</li>
             <li><input type="checkbox" name="filter" value="men">Men</li>
             <li><input type="checkbox" name="filter" value="women">Women</li>
             <li><input type="checkbox" name="filter" value="kids">Kids</li>
             <li><input type="checkbox" name="filter" value="clearance">Clearance</li>
           </ul>
-        </form>  
       </div>
     </div>
     <!-- catalog list -->
     <div class="content-item catalog-list">
-      <div onclick="pointTo('detailedProduct.html')" class="item">
+      <div onclick="pointTo('detailedProductMU.html')" class="item">
 
       <img src="img/item_1_0.png" alt="item_1_0"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
       <p class="price">$109.99</p>
       </div>
-      <div onclick="pointTo('detailedProduct.html')" class="item"><img src="img/item_2.png" alt="item_2"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
+      <div onclick="pointTo('detailedProductTH.html')" class="item"><img src="img/item_2_0.png" alt="Tottenham Hotspurs 2019 Third Kit"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
       <p class="price">$109.99</p></div>
-      <div class="item">item</div>
-      <div class="item">item</div>
-      <div class="item">item</div>
-      <div class="item">item</div>
-      <div class="item">item</div>
-      <div class="item">item</div>
+      <div class="item"><img src="img/item_3.png" alt="Manchester City 2018-2019 Home Kit"/><p class="item_name">Manchester City</p><p>2018-2019 Home Kit</p>
+      <p class="price">$109.99</p></div>
+      <div class="item"><img src="img/item_4.png" alt="Arsenal 2017-2018 Home Kit"/><p class="item_name">Arsenal</p><p>2017-2018 Home Kit</p>
+      <p class="price">$109.99</p></div>
+      <div class="item"><img src="img/item_5.png" alt="Manchester United 2018/2019 Third Kit"/><p class="item_name">Manchester United</p><p>2018-2019 Third Kit</p>
+      <p class="price">$109.99</p></div>
+      <div class="item"><img src="img/item_6.png" alt="Chelsea 2018/2019 Home Kit"/><p class="item_name">Chelsea</p><p>2018-2019 Home Kit</p>
+      <p class="price">$109.99</p></div>
+      <div class="item"><img src="img/item_7.png" alt="Everton 2018/2019 Home Kit"/><p class="item_name">Everton</p><p>2018-2019 Home Kit</p>
+      <p class="price">$109.99</p></div>
+      <div class="item"><img src="img/item_8.png" alt="Manchester United 1998/1999 Home Kit"/><p class="item_name">Manchester United</p><p>1998-1999 Home Kit</p>
+      <p class="price">$159.99</p></div>
     </div>
 
 	</div>
