--- a/index.html
+++ b/index.html
@@ -54,11 +54,18 @@
     <h3>New Arrivals By Catalog</h3>
 		<div class="content-item section-catalog">
       <div class="catalog">
-        <div class="catalog-img">image</div>
-        <a href="catalog.html">Catalog</a>
+        <div class="catalog-img"><img src="img/accessories.png" alt="accessories"/></div>
+        <a href="catalog.html" class="newArrivals-link">Accessories</a>
+
       </div>
-      <div class="catalog">Catalog</div>
-      <div class="catalog">Catalog</div>
+        <div class="catalog">
+          <div class="catalog-img"><img src="img/equipment.png" alt="equipment"/></div>
+        <a href="catalog.html" class="newArrivals-link">Equipment</a>
+      </div>
+      <div class="catalog">
+        <div class="catalog-img"><img src="img/football.png" alt="football"/></div>
+        <a href="catalog.html" class="newArrivals-link">Footballs</a>
+      </div>
 		</div>
 
 		<!-- club -->
